Tue Nov 17 11:53:55 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/ComponentServer/CIAO_ComponentServer.cpp:
        * ciao/ComponentServer/CIAO_ComponentServer_Impl.cpp:
        * ciao/ComponentServer/CIAO_ServerActivator_Impl.cpp:
        * DAnCE/Deployment/Module_Main.h:
        * DAnCE/NodeApplication/NodeApplication_Impl.cpp:
        * DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.cpp:
        * DAnCE/NodeManager/Node_Manager_Module.cpp:
        * DAnCE/NodeManager/NodeManager_Impl.cpp:
        * DAnCE/tests/CIAO/NodeManager-Deployments/simple_nm_launcher.cpp:
        * DAnCE/tests/DeploymentPlanTestReferences/test.cpp:
        * DAnCE/tests/NameServiceTest/clt_main.cpp:
        * DAnCE/tests/NodeApplicationManager-NodeApplication/test.cpp:
        * tests/CIAO_ComponentServer/Activator/client.cpp:
          Small code improvements, changes to logging, cleanup of old stuff

Tue Nov 17 10:39:35 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/IDL_Test/Double_Inherited_Component/ComponentC_exec.h:
        * tests/IDL_Test/Double_Inherited_Component/Inherited_components.idl:
          Extended tests with some more interfaces.

Tue Nov 17 10:12:55 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ndds/Getter_T.cpp:
        * connectors/dds4ccm/impl/ndds/Reader_T.cpp:
          Fixed compile warnings

Tue Nov 17 10:11:20 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/IDL_Test/Double_Inherited_Component/ComponentC.cdp:
        * tests/IDL_Test/Double_Inherited_Component/ComponentC_exec.h:
        * tests/IDL_Test/Double_Inherited_Component/ComponentC_exec.cpp:
        * tests/IDL_Test/Double_Inherited_Component/Inherited_components.idl:
          Extended test with setting attributes on each level.

Tue Nov 17 09:49:55 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ndds/Connector_T.cpp
        * connectors/dds4ccm/impl/ndds/Connector_T.h