@@ -17,21 +17,11 @@ module Keyed_Test
 {
   component Sender
   {
-    port CCM_DDS::KeyedTest::DDS_Update info_update;
+    port CCM_DDS::KeyedTest::DDS_Write info_write;
     attribute unsigned long rate;
     attribute unsigned short keys;
     attribute unsigned short iterations;
   };
 };
 
-/*
-For future use: IDL3 plus
-module Keyed_Test
-{
-  component Sender
-  {
-    port CCM_DDS::DDS_Write <Shape_Info> info;
-  };
-};
-*/
 #endif
