@@ -122,7 +122,7 @@
           <kind>tk_string</kind>
         </type>
         <value>
-          <string>create_Shape_Sender_Impl</string>
+          <string>create_Keyed_Test_Sender_Impl</string>
         </value>
       </value>
     </execParameter>
@@ -311,21 +311,6 @@
   </instance>
 
   <connection>
-    <name>info_out_data</name>
-    <internalEndpoint>
-      <portName>info_out_data</portName>
-      <provider>false</provider>
-      <kind>SimplexReceptacle</kind>
-      <instance xmi:idref="ReceiverComponentInstance" />
-    </internalEndpoint>
-    <internalEndpoint>
-      <portName>info_out_data</portName>
-      <provider>true</provider>
-      <kind>Facet</kind>
-      <instance xmi:idref="Keyed_Test_ConnectorComponentInstance2" />
-    </internalEndpoint>
-  </connection>
-  <connection>
     <name>_listenercontrol</name>
     <internalEndpoint>
       <portName>info_out_data_control</portName>
@@ -334,7 +319,7 @@
       <instance xmi:idref="ReceiverComponentInstance" />
     </internalEndpoint>
     <internalEndpoint>
-      <portName>info_out_data_control</portName>
+      <portName>push_consumer_data_control</portName>
       <provider>true</provider>
       <kind>Facet</kind>
       <instance xmi:idref="Keyed_Test_ConnectorComponentInstance2" />
@@ -349,14 +334,14 @@
       <instance xmi:idref="ReceiverComponentInstance" />
     </internalEndpoint>
     <internalEndpoint>
-      <portName>info_out_status</portName>
+      <portName>push_consumer_status</portName>
       <provider>false</provider>
       <kind>SimplexReceptacle</kind>
       <instance xmi:idref="Keyed_Test_ConnectorComponentInstance2" />
     </internalEndpoint>
   </connection>
   <connection>
-    <name>_rawlistner</name>
+    <name>_rawlistener</name>
     <internalEndpoint>
       <portName>info_out_data_listener</portName>
       <provider>true</provider>
@@ -364,7 +349,7 @@
       <instance xmi:idref="ReceiverComponentInstance" />
     </internalEndpoint>
     <internalEndpoint>
-      <portName>info_out_data_listener</portName>
+      <portName>push_consumer_data_listener</portName>
       <provider>false</provider>
       <kind>SimplexReceptacle</kind>
       <instance xmi:idref="Keyed_Test_ConnectorComponentInstance2" />
@@ -373,13 +358,13 @@
   <connection>
     <name>info_out_get_fresh_data</name>
     <internalEndpoint>
-      <portName>info_out_get_fresh_data</portName>
+      <portName>info_get_fresh_data</portName>
       <provider>false</provider>
       <kind>SimplexReceptacle</kind>
       <instance xmi:idref="ReceiverComponentInstance" />
     </internalEndpoint>
     <internalEndpoint>
-      <portName>info_out_get_fresh_data</portName>
+      <portName>pull_consumer_fresh_data</portName>
       <provider>true</provider>
       <kind>Facet</kind>
       <instance xmi:idref="Keyed_Test_ConnectorComponentInstance2" />
@@ -387,15 +372,15 @@
   </connection>
 
   <connection>
-    <name>updater_connection</name>
+    <name>writer_connection</name>
     <internalEndpoint>
-      <portName>info_update_data</portName>
+      <portName>info_write_data</portName>
       <provider>false</provider>
       <kind>SimplexReceptacle</kind>
       <instance xmi:idref="SenderComponentInstance" />
     </internalEndpoint>
     <internalEndpoint>
-      <portName>info_update_data</portName>
+      <portName>supplier_data</portName>
       <provider>true</provider>
       <kind>Facet</kind>
       <instance xmi:idref="Keyed_Test_ConnectorComponentInstance" />
